Fixes Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -116,7 +116,8 @@
                     </div>
 
                     <div class="show-detail-supplier" *ngIf="element.supplierList.length > 0">
-                      <img src="../../../../assets/images/i_icon.png" />
+                      <!-- <img src="../../../../assets/images/i_icon.png" /> -->
+                      <mat-icon class="material-info">info</mat-icon>
                       <div id="detail-supplier">
                         <div class="row">
                           <div class="col-sm-12">
@@ -205,7 +206,8 @@
                     </div>
 
                     <div class="show-detail-supplier" *ngIf="element.supplierList">
-                      <img src="../../../../assets/images/i_icon.png" />
+                      <!-- <img src="../../../../assets/images/i_icon.png" /> -->
+                       <mat-icon  class="material-info">info</mat-icon>
                       <div id="detail-supplier">
                         <div class="row">
                           <div class="col-sm-12">
