--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -64,7 +64,8 @@
                 </div>
 
                 <div class="show-detail-supplier" *ngIf="indent.IssuedQuantityList">
-                  <img src="../../../../assets/images/i_icon.png" />
+                  <!-- <img src="../../../../assets/images/i_icon.png" /> -->
+                   <mat-icon>info</mat-icon>
                   <div id="detail-supplier">
                     <div class="row">
                       <div class="col-sm-6">
