--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -53,15 +53,16 @@
                 <div class="statistics bg-white p-4 mb-4">
                     <div class="row">
                         <div class="col-md-12 d-flex justify-content-between">
-                            <mat-tab-group class="mat-tabs-button" (selectedTabChange)="onTabChanged($event);">
-                                <mat-tab label="Purchase Orders">
+                            <mat-tab-group class="mat-tabs-button">
+                                <mat-tab label="Purchase Orders" *ngIf="poData">
                                     <div class="statistics__purchase-order d-flex">
                                         <div class="statistics__tile stats mr-3">
                                             <!-- <div class="stats__icon">
                                                 <img src="assets/images/icon1.png" alt="Awarded Purchase Order" class="img-fluid">
                                             </div> -->
                                             <div class="stats__content">
-                                                <h2 class="mb-1">{{ poData?.totalCount }}</h2>
+                                                <h2 class="mb-1" *ngIf="poData.totalCount">{{ poData?.totalCount }}</h2>
+                                                 <h2 class="mb-1" *ngIf="!poData.totalCount">0</h2>
                                                 <p class="mb-0">Awarded Purchase Order</p>
                                             </div>
                                         </div>
@@ -71,21 +72,23 @@
                                                 <img src="assets/images/po-amount-icon.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div> -->
                                             <div class="stats__content">
-                                                <h2 class="mb-1">{{ poData?.totalValue | number }}</h2>
+                                                <h2 class="mb-1" *ngIf="poData.totalValue">{{ poData?.totalValue | number }}</h2>
+                                                 <h2 class="mb-1" *ngIf="!poData.totalValue">0</h2>
                                                 <p class="mb-0">Awarded P.O. Amount</p>
                                             </div>
                                         </div>
                                     </div>
                                 </mat-tab>
 
-                                <mat-tab label="Request for Quotations">
+                                <mat-tab label="Request for Quotations" *ngIf="rfqData">
                                     <div class="statistics__purchase-order d-flex">
                                         <div class="statistics__tile stats mr-3">
                                             <!-- <div class="stats__icon">
                                                 <img src="assets/images/icon6.png" alt="Awarded Purchase Order" class="img-fluid">
                                             </div> -->
                                             <div class="stats__content">
-                                                <h2 class="mb-1">{{ poData?.totalCount }}</h2>
+                                                <h2 class="mb-1" *ngIf="rfqData.totalCount">{{ rfqData?.totalCount }}</h2>
+                                                <h2 class="mb-1" *ngIf="!rfqData.totalCount">0</h2>
                                                 <p class="mb-0">Number of RFQ</p>
                                             </div>
                                         </div>
@@ -95,21 +98,23 @@
                                                 <img src="assets/images/po-amount-icon.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div> -->
                                             <div class="stats__content">
-                                                <h2 class="mb-1">{{ poData?.totalValue | number : '1.2-2' }}</h2>
+                                                <h2 class="mb-1" *ngIf="rfqData.totalValue">{{ rfqData?.totalValue | number : '1.2-2' }}</h2>
+                                                <h2 class="mb-1" *ngIf="!rfqData.totalValue">0</h2>
                                                 <p class="mb-0">RFQ Amount</p>
                                             </div>
                                         </div>
                                     </div>
                                 </mat-tab>
 
-                                <mat-tab label="Indents">
+                                <mat-tab label="Indents" *ngIf="indentData">
                                     <div class="statistics__purchase-order d-flex">
                                         <div class="statistics__tile stats mr-3">
                                             <!-- <div class="stats__icon">
                                                 <img src="assets/images/fulfilled-indent-icon.png" alt="Awarded Purchase Order" class="img-fluid">
                                             </div> -->
                                             <div class="stats__content">
-                                                <h2 class="mb-1">{{ poData?.totalCount }}</h2>
+                                                <h2 class="mb-1" *ngIf="indentData.totalCount">{{ indentData?.totalCount }}</h2>
+                                                <h2 class="mb-1" *ngIf="!indentData.totalCount">0</h2>
                                                 <p class="mb-0">Fulfilled Indents</p>
                                             </div>
                                         </div>
@@ -119,7 +124,8 @@
                                                 <img src="assets/images/raised-indent.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div> -->
                                             <div class="stats__content">
-                                                <h2 class="mb-1">{{ poData?.totalValue | number : '1.2-2' }}</h2>
+                                                <h2 class="mb-1" *ngIf="indentData.totalValue">{{ indentData?.totalValue | number : '1.2-2' }}</h2>
+                                                <h2 class="mb-1" *ngIf="!indentData.totalValue">0</h2>
                                                 <p class="mb-0">Raised Indents</p>
                                             </div>
                                         </div>
@@ -188,7 +194,8 @@
                                 <img src="assets/images/Add-Project.png" alt="Total number of project" class="img-fluid mr-3">
                             </div>
                             <div class="project-tile__content">
-                                <h2 class="mb-1">{{ projectCount }}</h2>
+                                <h2 class="mb-1" *ngIf="projectCount">{{ projectCount }}</h2>
+                                <h2 class="mb-1" *ngIf="!projectCount">0</h2>
                                 <p class="mb-0">Total number of projects</p>
                             </div>
                         </div>
