--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -36,7 +36,7 @@
 </mat-toolbar>
 
     <mat-menu #notifs="matMenu" class="header-bell-menu">
-            <div class="main-div-bell" mat-menu-item>
+            <div class="main-div-bell" mat-menu-item [disableRipple]="true">
                   <div id="notifications">
                 <h3>Notifications</h3>
                 <div class="body-of-notification">
