--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -492,3 +492,8 @@ mat-accordion {
     color: $main-color;
     cursor: pointer;
   }
+
+  .material-info{
+    font-size: 16px;
+    padding-top: 8px;
+  }
