--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -25,7 +25,7 @@
     <mat-expansion-panel *ngFor="let material of project.GlobalMaterials" class="myPanel">
       <mat-expansion-panel-header class="mat-row material-project">
         <span class="mat-cell" matTooltip=" {{ material.GlobalMaterial.materialName }}">
-          <div class="limited-character">
+          <div class="limited-character global">
             {{ material.GlobalMaterial.materialName }}
           </div>
         </span>
