--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -27,7 +27,11 @@
           <!-- Position Column -->
           <ng-container matColumnDef="Material Name">
             <th mat-header-cell *matHeaderCellDef>Material Name</th>
-            <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
+            <td mat-cell *matCellDef="let element">
+             <div class="limited-character global"  matTooltip=" {{ element.materialName }}">
+               {{ element.materialName }}
+             </div> 
+              </td>
           </ng-container>
 
           <!-- Name Column -->
