--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -45,7 +45,7 @@
           <th mat-header-cell *matHeaderCellDef>Material Name</th>
           <td mat-cell *matCellDef="let element; let i = index" formGroupName="{{ i }}">
             <mat-checkbox #ch (change)="materialChecked(ch, i, element)">
-              <div class="limited-character" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
+              <div class="limited-character po-p-m" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
             </mat-checkbox>
           </td>
         </ng-container>
