--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -25,7 +25,7 @@
           <ng-container matColumnDef="Material Name">
             <th mat-header-cell *matHeaderCellDef>Material Name</th>
             <td mat-cell *matCellDef="let element">
-              <div class="limited-character" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
+              <div class="limited-character global" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
             </td>
           </ng-container>
 
