--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -51,8 +51,8 @@
               <th mat-header-cell *matHeaderCellDef>Material Name</th>
               <td mat-cell *matCellDef="let element; let i = index" formGroupName="{{ i }}">
                 <mat-checkbox #ch [checked]="element.checked" (change)="materialChecked(ch, i, p, project.projectId, element)">
-                  <div class="limited-character" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
-                  <div class="limited-character" matTooltip=" {{ element.materialGroup }}">
+                  <div class="limited-character po-p-m" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
+                  <div class="limited-character po-p-m" matTooltip=" {{ element.materialGroup }}">
                     <span class="category-name">
                       {{ element.materialGroup }}
                     </span>
