--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -493,7 +493,7 @@ mat-accordion {
     cursor: pointer;
   }
 
-  .material-info{
-    font-size: 16px;
-    padding-top: 8px;
+
+    .signupForm-error-msg.green-colour{
+      color:#569414;
   }
