Bug Fixes, Indent Date issue solved, Allocated Qty changed, Global scroll removed as per manoj, unit column removed from Bom table Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -15,7 +15,7 @@
         <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
         <span class="mat-header-cell" mat-sort-header="availableQuantity">Available quantity in project</span>
       </section>
-      <div class="global-panel">
+      <div>
         <mat-expansion-panel *ngFor="let material of newMaterialData | SearchPipe: searchMaterial:'GlobalMaterial':'materialName'" class="myPanel">
           <mat-expansion-panel-header class="mat-row material-row">
             <span class="mat-cell" matTooltip="{{ material.GlobalMaterial.materialName }}">
