--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -16,7 +16,7 @@
     <span class="mat-header-cell" mat-sort-header="availableQuantity">Available quantity in project</span>
   </section>
 
-<div class="global-panel">
+<div>
   <mat-expansion-panel *ngFor="let project of newProjectData | SearchPipe: searchProject:'ProjectGlobal':'projectName'" class="myPanel">
     <mat-expansion-panel-header class="mat-row material-row">
       <span class="mat-cell">{{ project.ProjectGlobal.projectName }}</span>
