--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -65,7 +65,7 @@
 
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i" class="border-input">
-                <input matInput formControlName="dueDate" [matDatepicker]="startDate" placeholder="Required Date" 
+                <input matInput formControlName="dueDate" #ref [matDatepicker]="startDate" placeholder="Required Date"  (dateChange)="getStart(ref.value,i)"
                   [min]="minDate" (focus)="startDate.open()" readonly />
                 <!-- <span class="form-palceholder">{{ formatDate(materialForms.controls.forms.controls.dueDate.value) }}</span> -->
                 <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
