--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -6,7 +6,7 @@
         <span class="text-semi-bold" *ngIf="mode != 'edit'; else editBlock">{{ cardData.poNumber }}</span>
         <ng-template #editBlock>
           <mat-form-field class="border-input">
-            <input matInput type="string" formControlName="orderNo" placeholder="*P.O. No." class="m-r-5" />
+            <input matInput type="string" formControlName="orderNo" placeholder="P.O. No." class="m-r-5" />
           </mat-form-field>
         </ng-template>
       </span>
