--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -5,7 +5,7 @@
         <div class="col-sm-12">
           <span>
             <button mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="!getFormValidation()">
-              Allocate Quantity
+              Create P.O
             </button>
           </span>
         </div>
