--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -1,8 +1,16 @@
-<div lass="header-add-edit-dialog">
-  <h1 mat-dialog-title>ADD GRN</h1>
-  <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
+<div class="header-add-edit-dialog p-r-0">
+  <div class="row width-100">
+      <div class="col-sm-10">
+     <h1 mat-dialog-title>ADD GRN</h1>
+  </div>
+    <div class="col-sm-2">
+        <button type="button" class="close pull-right p-t-5" (click)="closeDialog()" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+  </div>
+  
+ 
 </div>
 
 <form *ngIf="materialForms" [formGroup]="materialForms" (ngSubmit)="addGrn()">
@@ -12,7 +20,10 @@
         <table mat-table [dataSource]="dataSource" class="col-sm-12">
           <ng-container matColumnDef="Material Name">
             <th mat-header-cell *matHeaderCellDef>Material Name</th>
-            <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
+            <td mat-cell *matCellDef="let element">
+              <div class="limited-character global">
+                {{ element.materialName }}
+              </div></td>
           </ng-container>
 
           <ng-container matColumnDef="Brand Name">
