--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -1,6 +1,6 @@
 
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()" class="add-edit-user-modal-form">
- <div class="header-add-edit-dialog">
+ <div class="header-add-edit-dialog row">
       <h1 mat-dialog-title>User Details</h1>
       <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
         <span aria-hidden="true">×</span>
