--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -1,16 +1,23 @@
 <form *ngIf="allProjects" [formGroup]="form">
   <div class="row ">
-    <div class="col-xs-12 text-right p-b-10">
-      <span>
-        <button mat-raised-button matStepperNext [disabled]="!(form.valid && counter > 0)" (click)="materialAdded()" class="main-background-color main-button color-white">
-          Next
+    <div class="col-xs-4 p-t-10 border-input">
+      <mat-form-field class=" input-search-padding-zero">
+        <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
+        <button mat-button matSuffix mat-icon-button>
+          <mat-icon>search</mat-icon>
         </button>
-      </span>
+      </mat-form-field>
+
+      <mat-form-field class=" p-l-20 input-search-padding-zero">
+        <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
+        <button mat-button matSuffix mat-icon-button>
+          <mat-icon>search</mat-icon>
+        </button>
+      </mat-form-field>
     </div>
-  </div>
-  <div class="row p-b-10 ">
-    <div class="col-sm-12">
-      <mat-form-field class="border-select pull-right m-r-2 select-project">
+
+    <div class="col-xs-4 text-right">
+      <mat-form-field class="border-select select-project">
         <mat-label *ngIf="!rfqDetails.length">Select Project</mat-label>
         <mat-select formControlName="selectedProject" multiple>
           <div class="display-flex">
@@ -28,11 +35,19 @@
         </mat-select>
       </mat-form-field>
     </div>
+
+    <div class="col-xs-4 text-right">
+      <span>
+        <button mat-raised-button matStepperNext [disabled]="!(form.valid && counter > 0)" (click)="materialAdded()" class="main-background-color main-button color-white">
+          Next
+        </button>
+      </span>
+    </div>
   </div>
 </form>
 <form *ngIf="rfqDetails.length" [formGroup]="materialForm">
   <span formArrayName="forms">
-    <div *ngFor="let project of rfqDetails; let p = index" [formGroupName]="p">
+    <div *ngFor="let project of rfqDetails | SearchPipe: searchProject:'projectName'; let p = index" [formGroupName]="p">
       <mat-accordion *ngIf="rfqDetails" class="rfq-detail-body">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
@@ -46,7 +61,12 @@
               </a>
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <table mat-table [dataSource]="project.projectMaterialList" class="mat-elevation-z8 col-sm-12 po-custom-mat-width" formArrayName="materialList">
+          <table
+            mat-table
+            [dataSource]="project.projectMaterialList | SearchPipe: searchMaterial:'materialName'"
+            class="mat-elevation-z8 col-sm-12 po-custom-mat-width"
+            formArrayName="materialList"
+          >
             <ng-container matColumnDef="Material Name">
               <th mat-header-cell *matHeaderCellDef>Material Name</th>
               <td mat-cell *matCellDef="let element; let i = index" formGroupName="{{ i }}">
