--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -1,14 +1,13 @@
 <form *ngIf="projectSelectedMaterials.length" [formGroup]="materialForms">
   <div class="row ">
     <div class="col-xs-6 p-t-10 border-input">
-     
-        <mat-form-field class=" input-search-padding-zero">
-          <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
-          <button mat-button matSuffix mat-icon-button>
-            <mat-icon>search</mat-icon>
-          </button>
-        </mat-form-field>
-    
+      <mat-form-field class=" input-search-padding-zero">
+        <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
+        <button mat-button matSuffix mat-icon-button>
+          <mat-icon>search</mat-icon>
+        </button>
+      </mat-form-field>
+
       <mat-form-field class=" p-l-20 input-search-padding-zero">
         <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
         <button mat-button matSuffix mat-icon-button>
@@ -68,30 +67,40 @@
               <div class="limited-character" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
             </td>
           </ng-container>
-
-          <ng-container matColumnDef="Required Date">
-            <th mat-header-cell *matHeaderCellDef>Required Date</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              {{ element.dueDate | date: "dd-MMM-yyy" }}
+          <ng-container matColumnDef="Estimated Qty">
+            <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
+            <td class="text-center" mat-cell *matCellDef="let element">
+              {{ element.estimatedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
             </td>
           </ng-container>
           <ng-container matColumnDef="Requested Qty">
             <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
-            <td mat-cell *matCellDef="let element">
+            <td class="text-center" mat-cell *matCellDef="let element">
               {{ element.requestedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
             </td>
           </ng-container>
-          <ng-container matColumnDef="Estimated Qty">
-            <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.estimatedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
+          <ng-container matColumnDef="Fullfillment Date">
+            <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input">
+                <input matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
+                <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
+                <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
+              </mat-form-field>
             </td>
           </ng-container>
           <ng-container matColumnDef="Estimated Rate">
             <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
-                <input matInput formControlName="estimatedRate" type="number" placeholder="Estimated Rate" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
+                <input
+                  matInput
+                  formControlName="estimatedRate"
+                  type="number"
+                  placeholder="Estimated Rate"
+                  min="0"
+                  onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                />
               </mat-form-field>
             </td>
           </ng-container>
@@ -99,7 +108,7 @@
             <th mat-header-cell *matHeaderCellDef>Quantity</th>
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
-                <input matInput formControlName="quantity" type="number" placeholder="Quantity" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
+                <input matInput formControlName="quantity" type="number" placeholder="Quantity" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
               </mat-form-field>
             </td>
           </ng-container>
