--- a/src/app/shared/dialogs/selectrfq-terms/selectrfq-terms.component.html
+++ b/src/app/shared/dialogs/selectrfq-terms/selectrfq-terms.component.html
@@ -1,36 +1,33 @@
 <form *ngIf="rfqTerms.length" [formGroup]="termsForm" ((ngSubmit)="submitRfq()">
-  <div class="row">
-    <div class="col-xs-5">
+  <div class="row text-center">
+    <div class="col-xs-12">
       <h1 mat-dialog-title>Select Payment Terms</h1>
     </div>
-    <div class="col-xs-5">
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <ng-container *ngFor="let term of rfqTerms">
+        <mat-radio-group name="term" aria-labelledby="example-radio-group-label" class="display-block" formControlName="term">
+          <mat-radio-button class="example-radio-button" [value]="term" (change)="change(term.termsDesc)">
+            {{ term.termsDesc }}
+          </mat-radio-button>
+          <form [formGroup]="customTermForm" class="display-inline-block p-l-10">
+            <mat-form-field *ngIf="term.termsDesc.trim() === 'Others'" class="border-input main-color p-l-10">
+              <input matInput formControlName="customTerm" type="text" placeholder="Add Custom Term" />
+            </mat-form-field>
+          </form>
+        </mat-radio-group>
+      </ng-container>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 p-t-20 text-center">
       <a href="javascript:void(0)" class="main-color p-r-5" (click)="close()">
         skip
       </a>
       <button mat-raised-button class="main-background-color main-button color-white" (click)="submitRfq()">
         Next
       </button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-5">
-      <ng-container *ngFor="let term of rfqTerms">
-        <mat-radio-group name="term" aria-labelledby="example-radio-group-label" class="display-block" formControlName="term">
-          <mat-radio-button class="example-radio-button" [value]="term" (change)="change(term.termsDesc)">
-            {{ term.termsDesc }}
-          </mat-radio-button>
-        </mat-radio-group>
-      </ng-container>
-    </div>
-    <div class="col-xs-3">
-      <form [formGroup]="customTermForm">
-        <span>
-          <mat-form-field class="example-full-width">
-            <mat-label>Term Desc</mat-label>
-            <textarea matInput formControlName="customTerm" placeholder="Custom Term Desc"></textarea>
-          </mat-form-field>
-        </span>
-      </form>
     </div>
   </div>
 </form>
