--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -366,6 +366,7 @@ a:hover {
 tr.mat-header-row {
   height: 45px;
 }
+
 tr.mat-footer-row,
 tr.mat-row {
   height: 35px;
@@ -471,6 +472,10 @@ mat-accordion {
   display: block;
 }
 
+.display-inline-block {
+  display: inline-block;
+}
+
 .hidden {
   visibility: hidden;
 }
@@ -491,4 +496,8 @@ mat-accordion {
 .upload-template:hover {
   color: $main-color;
   cursor: pointer;
+}
+
+.mat-horizontal-stepper-header-container {
+  height: 54px !important;
 }
